--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "tsc": "tsc",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
@@ -22,8 +23,12 @@
   "dependencies": {
     "@nestjs/common": "^7.1.1",
     "@nestjs/core": "^7.1.1",
+    "@nestjs/graphql": "^7.6.0",
     "@nestjs/platform-express": "^7.1.1",
     "@nestjs/typeorm": "^7.1.1",
+    "apollo-server-express": "^2.17.0",
+    "graphql": "^15.3.0",
+    "graphql-tools": "^6.2.0",
     "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
